<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.jumbox.tekatekisilang.MainGameFragmet"
        android:background="@color/colorBackGround">

    <RelativeLayout
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp">

        <TextView
                android:id="@+id/tv_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/point"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"/>

        <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/level"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"/>

        <TextView
                android:id="@+id/tv_jumlah_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/score"
                android:textSize="16sp"
                android:textColor="@color/colorWhite"/>

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/lin_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <RelativeLayout
                    android:id="@+id/rel_petunjuk"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:paddingStart="8dp"
                    android:paddingLeft="8dp"
                    android:paddingEnd="8dp"
                    android:paddingRight="8dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp">

                <TextView
                        android:id="@+id/tv_petunjuk"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/teka_teki_silang"
                        android:textSize="@dimen/sizeTvMini"/>

            </RelativeLayout>

        <include android:id="@+id/lin_keypad"
                 android:layout_height="75dp"
                 android:layout_width="match_parent"
                layout="@layout/layout_keypad"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_below="@id/tool_bar"
            android:layout_above="@id/lin_bottom"
            android:overScrollMode="never"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:background="@color/colorBlack"/>

</RelativeLayout>
